objects/Legal_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>Tax ID</description>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Two_Pass_Calculation__c</fullName>
        <description>Calculates a member on the second pass through the outline</description>
        <label>Two Pass Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip Code</description>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Legal Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Legal_Entity_ID__c</columns>
        <columns>Name_No_Hierarchy__c</columns>
        <columns>Country__c</columns>
        <columns>Currency__c</columns>
        <columns>Business_Region__c</columns>
        <columns>Legal_Entity_Hierarchy__c</columns>
        <columns>Legal_Entity_Management_Hierarchy__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fianance_MDM_L1_Approval_Legal_Entity</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L1 Approval</label>
        <queue>Finance_MDM_L1_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_CORP_FPA_Legal_Entity</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Legal_Entity_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Queue</filterScope>
        <label>Finance MDM CORP FPA</label>
        <language>en_US</language>
        <queue>Finance_MDM_CORP_FPA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Accounting_Legal_Entity</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Accounting</label>
        <queue>Finance_MDM_Finance_Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Controller_Legal_Entity</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Controller</label>
        <queue>Finance_MDM_Finance_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L2_Approval_Legal_Entity</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L2 Approval</label>
        <queue>Finance_MDM_L2_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L3_Approval_Legal_Entity</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L3 Approval</label>
        <queue>Finance_MDM_L3_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Revenue_Controller_Legal_Entity</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Revenue Controller</label>
        <queue>Finance_MDM_Revenue_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>SFDC Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Legal_Entity_Id_Freeze</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, Freez_Record__c , ISCHANGED( Legal_Entity_ID__c ))</errorConditionFormula>
        <errorDisplayField>Legal_Entity_ID__c</errorDisplayField>
        <errorMessage>Legal Entity Id can&apos;t be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legal_Entity_Name_Freeze</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, Freez_Record__c , ISCHANGED( Name_No_Hierarchy__c ))</errorConditionFormula>
        <errorDisplayField>Name_No_Hierarchy__c</errorDisplayField>
        <errorMessage>Legal Entity Name can&apos;t be changed.</errorMessage>
    </validationRules>
</CustomObject>